# pytoml_test

./: pyproject.toml
src/: fset1.py
src1/: __init__.py  utilss.py
src1/versioning/: __init__.py  version_getters.py
