[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "test_pkg"
authors = [
    {name = "tad", email = "tad@gmail.com"},
]
description = "My package description"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "src1.versioning.__version__"}

# [metadata]
# version = {python = "src.utills.get_version()"}   USELESS, CHATGPT SUGGETION

